# painter

./: Cargo.toml  README.md  needtodo.md  run_all_examples.sh  wrongs.md
changes/: 0.1.*.md
examples/: bar_from_his.rs  demo.rs  draw_area.rs  draw_curve.rs  draw_errorbar.rs  draw_histrogram.rs  draw_scatter.rs  draw_stair.rs  two_axis.rs
src/: axis.rs  color.rs  drawable.rs  figure.rs  lib.rs  text_render.rs  utils.rs
src/primitive/: area.rs  config.rs  curve.rs  errorbar.rs  histrogram.rs  mod.rs  scatter.rs  stair.rs
