[package]
name = "painter"
description = "A simple plotter library"
version = "0.1.7"
authors = ["tll tll53629581@gmail.com"]
repository = "https://github.com/Tzlzl12/painter"
edition = "2024"
license = "MIT"

include = [
  "src/**/*.rs",
  "Cargo.toml",
  "LICENSE"
]

exclude = [
  "examples/",
  "target/",
  "changes/",
  "README.md"
]


[dependencies]
# winit = "0.30.12"
tiny-skia = "0.11.4"
softbuffer = "0.4.8"
anyhow = "1.0"

[dependencies.winit]
version = "0.30.12"
default-features = false
features = ["wayland", "rwh_06"]
